; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_macrotab.c_macro_bcache.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_macrotab.c_macro_bcache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macro_table = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.macro_table*, i8*, i32)* @macro_bcache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @macro_bcache(%struct.macro_table* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.macro_table*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.macro_table* %0, %struct.macro_table** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.macro_table*, %struct.macro_table** %5, align 8
  %10 = getelementptr inbounds %struct.macro_table, %struct.macro_table* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load %struct.macro_table*, %struct.macro_table** %5, align 8
  %17 = getelementptr inbounds %struct.macro_table, %struct.macro_table* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i8* @bcache(i8* %14, i32 %15, i64 %18)
  store i8* %19, i8** %4, align 8
  br label %28

20:                                               ; preds = %3
  %21 = load i32, i32* %7, align 4
  %22 = call i8* @xmalloc(i32 %21)
  store i8* %22, i8** %8, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @memcpy(i8* %23, i8* %24, i32 %25)
  %27 = load i8*, i8** %8, align 8
  store i8* %27, i8** %4, align 8
  br label %28

28:                                               ; preds = %20, %13
  %29 = load i8*, i8** %4, align 8
  ret i8* %29
}

declare dso_local i8* @bcache(i8*, i32, i64) #1

declare dso_local i8* @xmalloc(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
